--- a/views/content/faq.html
+++ b/views/content/faq.html
@@ -10,7 +10,7 @@
       <uib-accordion close-others="oneAtATime" is-open="status.open">
         <uib-accordion-group is-open="status.isFirstOpen" is-disabled= "status.isFirstDisabled">
           <uib-accordion-heading>
-            How does the online program work? <i class="pull-right fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i>
+            How does the online program work? <i class="open-me fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i>
           </uib-accordion-heading>
           <div class="faq-descp">
             <p class="text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert nutritionists,
@@ -19,70 +19,70 @@
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open2">
           <uib-accordion-heading>
-            Do I need to pay upfront or I can pay in installments?<i class="pull-right fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i>
+            Do I need to pay upfront or I can pay in installments?<i class="open-me fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open3">
           <uib-accordion-heading>
-            Does Suman Agarwal meet the clients personally?<i class="pull-right fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i>
+            Does Suman Agarwal meet the clients personally?<i class="open-me fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open4">
           <uib-accordion-heading>
-            Is there any special offer or discount for a family or a couple?<i class="pull-right fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i>
+            Is there any special offer or discount for a family or a couple?<i class="open-me fa" ng-class="{'fa-minus': status.open4, 'fa-plus': !status.open4}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open5">
           <uib-accordion-heading>
-            How does this program work?<i class="pull-right fa" ng-class="{'fa-minus': status.open5, 'fa-plus': !status.open5}"></i>
+            How does this program work?<i class="open-me fa" ng-class="{'fa-minus': status.open5, 'fa-plus': !status.open5}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open6">
           <uib-accordion-heading>
-            What is the pattern of diet, whether it is strict and how is the exercise pattern?<i class="pull-right fa" ng-class="{'fa-minus': status.open6, 'fa-plus': !status.open6}"></i>
+            What is the pattern of diet, whether it is strict and how is the exercise pattern?<i class="open-me fa" ng-class="{'fa-minus': status.open6, 'fa-plus': !status.open6}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open7">
           <uib-accordion-heading>
-            How soon we can get an appointment?<i class="pull-right fa" ng-class="{'fa-minus': status.open7, 'fa-plus': !status.open7}"></i>
+            How soon we can get an appointment?<i class="open-me fa" ng-class="{'fa-minus': status.open7, 'fa-plus': !status.open7}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open8">
           <uib-accordion-heading>
-            Do we get a grace period in case we are unable to achieve our target weight in the given time span?<i class="pull-right fa" ng-class="{'fa-minus': status.open8, 'fa-plus': !status.open8}"></i>
+            Do we get a grace period in case we are unable to achieve our target weight in the given time span?<i class="open-me fa" ng-class="{'fa-minus': status.open8, 'fa-plus': !status.open8}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open9">
           <uib-accordion-heading>
-            What are the differences between packages with Suman Agarwal and her Senior Nutritionist?<i class="pull-right fa" ng-class="{'fa-minus': status.open9, 'fa-plus': !status.open9}"></i>
+            What are the differences between packages with Suman Agarwal and her Senior Nutritionist?<i class="open-me fa" ng-class="{'fa-minus': status.open9, 'fa-plus': !status.open9}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open10">
           <uib-accordion-heading>
-            How would I know which package suits me the best?<i class="pull-right fa" ng-class="{'fa-minus': status.open10, 'fa-plus': !status.open10}"></i>
+            How would I know which package suits me the best?<i class="open-me fa" ng-class="{'fa-minus': status.open10, 'fa-plus': !status.open10}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open11">
           <uib-accordion-heading>
-            Do you give tablets to lose weight?<i class="pull-right fa" ng-class="{'fa-minus': status.open11, 'fa-plus': !status.open11}"></i>
+            Do you give tablets to lose weight?<i class="open-me fa" ng-class="{'fa-minus': status.open11, 'fa-plus': !status.open11}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open12">
           <uib-accordion-heading>
-            Can we gift these programs to our family members or friends?<i class="pull-right fa" ng-class="{'fa-minus': status.open12, 'fa-plus': !status.open12}"></i>
+            Can we gift these programs to our family members or friends?<i class="open-me pull-right fa" ng-class="{'fa-minus': status.open12, 'fa-plus': !status.open12}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open13">
           <uib-accordion-heading>
-            Do you have plans for kids as well?<i class="pull-right fa" ng-class="{'fa-minus': status.open13, 'fa-plus': !status.open13}"></i>
+            Do you have plans for kids as well?<i class="open-me fa" ng-class="{'fa-minus': status.open13, 'fa-plus': !status.open13}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open14">
-          <uib-accordion-heading>Do you have packages other than weight loss, like detox or bridal package?<i class="pull-right fa" ng-class="{'fa-minus': status.open14, 'fa-plus': !status.open14}"></i>
+          <uib-accordion-heading>Do you have packages other than weight loss, like detox or bridal package?<i class="open-me fa" ng-class="{'fa-minus': status.open14, 'fa-plus': !status.open14}"></i>
           </uib-accordion-heading>
         </uib-accordion-group>
         <uib-accordion-group is-open="status.open15">
-          <uib-accordion-heading>Do you suggest any elaborate blood tests? <i class="pull-right fa" ng-class="{'fa-minus': status.open15, 'fa-plus': !status.open15}"></i>
+          <uib-accordion-heading>Do you suggest any elaborate blood tests? <i class="open-me fa" ng-class="{'fa-minus': status.open15, 'fa-plus': !status.open15}"></i>
          </uib-accordion-heading>
       </uib-accordion-group>
     </uib-accordion>
