--- a/sass/main.scss
+++ b/sass/main.scss
@@ -165,6 +165,12 @@ $instagram: #396d9a !default;
   font-family: $font-gotham;
 }
 //button
+.btn {
+  @include transition(all 300ms ease);
+  &:hover {
+    @include transition(all 300ms ease);
+  }
+}
 .btn-yellow {
   @include button-variant(white, $brand-yellow, $brand-yellow);
   &:hover {
@@ -995,12 +1001,19 @@ button {
       background-color: $brand-brown;
       .panel-title a {
         padding: 20px;
+        position: relative;
         display: block;
         color: $brand-brown-dark;
         font-size: 18px;
         @extend .text-bold;
       }
     }
+  }
+  .open-me {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    @include transform(translateY(-50%));
   }
 }
 ///end faq////
