--- a/views/content/healthpackages.html
+++ b/views/content/healthpackages.html
@@ -16,7 +16,7 @@
               <img src="img/packages/1.png" alt="">
               <h3 class="text-uppercase font-semibold">Weight Loss</h3>
               <p class="text-uppercase font-semibold">(Includes health management)</p>
-              <a href="" class="btn btn-primary text-uppercase btn-packages">Know More</a>
+              <a href="#/weightmanagement" class="btn btn-primary text-uppercase btn-packages">Know More</a>
             </div>
           </div>
 
@@ -25,7 +25,7 @@
               <img src="img/packages/2.png" alt="">
               <h3 class="text-uppercase font-semibold">Health Management</h3>
               <p class="text-uppercase font-semibold">&nbsp;</p>
-              <a href="" class="btn btn-primary text-uppercase btn-packages">Know More</a>
+              <a href="#/healthmanagement" class="btn btn-primary text-uppercase btn-packages">Know More</a>
             </div>
           </div>
 
