--- a/views/header.html
+++ b/views/header.html
@@ -3,17 +3,17 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12 col-xs-12">
 
           <div class="row">
-            <div class="col-md-1">
+            <div class="col-md-1 col-sm-3 col-xs-2">
               <div class="hamburger">
                 <span class="brand-primary-bg one"></span>
                 <span class="brand-primary-bg two"></span>
                 <span class="brand-primary-bg three"></span>
               </div>
             </div>
-            <div class="col-md-11">
+            <div class="col-md-11 col-sm-9 col-xs-10">
               <div class="logo">
                 <h1>
                   <a href="#/home">
@@ -26,11 +26,11 @@
           </div>
 
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-12 col-xs-12">
           <div class="links">
 
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 col-sm-5 col-xs-12">
                 <div class="social-links">
                   <ul>
                     <li><a href="#/cart" class="brand-primary"><i class="fa fa-shopping-cart"></i></a></li>
@@ -42,12 +42,12 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-4 col-xs-6">
                 <div class="contact-tel">
                   <a class="brand-primary font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
-              <div class="col-md-2">
+              <div class="col-md-2 col-sm-3 col-xs-6">
                 <div class="signin">
                   <a class="brand-primary text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
                 </div>
