--- a/views/footer.html
+++ b/views/footer.html
@@ -1,7 +1,7 @@
 <footer class="brand-primary-bg font-semibold">
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-2 col-xs-6">
                 <div class="menu text-uppercase">
                     <ul>
                         <li><a href="" title="Home">home</a></li>
@@ -16,7 +16,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-xs-6">
                 <div class="menu2">
                     <h5 class="text-uppercase brand-primary-lighter letter-space">Health Packages</h5>
                     <div class="submenu text-uppercase">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-xs-6">
                 <div class="menu2">
                     <h5 class="brand-primary-lighter">HEALTH SHOP</h5>
                     <div class="submenu text-uppercase">
@@ -60,7 +60,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-xs-6">
                 <div class="">
                     <div class="note brand-primary-lighter letter-space">
                         <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
