--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -13,8 +13,15 @@
       }
     }
   }
+  // faq end
+  .get-up {
+    padding: 35px;
+    margin: -80px;
+  }
+  .health-descp {
+    font-size: 15px;
+  }
 }
-// faq end
 @media (max-width: $screen-xs-max) {
   // faq
   .faq-accordion {
@@ -28,7 +35,9 @@
         }
       }
     }
-    .faq-descp { font-size: 13px; }
+    .faq-descp {
+      font-size: 13px;
+    }
   }
   // faq end
 }
@@ -38,16 +47,22 @@
     padding: 15px;
     .panel-default {
       margin: 10px 0;
-      .panel-body { padding: 12px; }
+      .panel-body {
+        padding: 12px;
+      }
       .panel-heading {
         .panel-title a {
           padding: 20px 25px 20px 20px;
           font-size: 12px;
-         }
+        }
       }
     }
-    .faq-descp { font-size: 12px; }
-    .open-me { right: 9px; }
+    .faq-descp {
+      font-size: 11px;
+    }
+    .open-me {
+      right: 9px;
+    }
   }
   // faq end
 }
