--- a/views/content/team.html
+++ b/views/content/team.html
@@ -16,13 +16,13 @@
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Nidhi Agarwal</h3>
               <h4 class="brand-primary">Senior Nutritionist</h4>
@@ -34,13 +34,13 @@
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="img/team/hiral.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Hiral Shah</h3>
               <h4 class="brand-primary">Nutritionist</h4>
@@ -53,13 +53,13 @@ She consults clients at Selfcare’s Tardeo branch  as well as handles our onlin
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="img/team/vibha.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Vibha Rane</h3>
               <h4 class="brand-primary">Head of Operations, Senior Nutritionist</h4>
@@ -74,13 +74,13 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="img/team/deepti.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Deepti Nair</h3>
               <h4 class="brand-primary">Senior Nutritionist, Santacruz Branch Head</h4>
@@ -93,13 +93,13 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="img/team/adity.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Adity Killa</h3>
               <h4 class="brand-primary">Senior Nutritionist, Kolkata Branch Head</h4>
@@ -112,13 +112,13 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="img/team/dipti.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Dipti Patole Mayenkar</h3>
               <h4 class="brand-primary">Senior Nutritionist</h4>
@@ -130,13 +130,13 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
       <div class="single-member">
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-3">
             <div class="member-image">
               <img src="img/team/shaikh.jpg" alt="" class="img-responsive doneloading">
             </div>
           </div>
 
-          <div class="col-md-10">
+          <div class="col-md-10 col-sm-9">
             <div class="member-detail">
               <h3 class="brand-brown-dark">Shaikh Mona Afroz</h3>
               <h4 class="brand-primary">Senior Nutritionist</h4>
