--- a/sass/main.scss
+++ b/sass/main.scss
@@ -945,6 +945,7 @@ button {
 /////meet////
 .suman-video {
   width: 70%;
+  height: 300px;
   @extend.m-center;
   position: relative;
   top: 50px;
