--- a/views/content/meet.html
+++ b/views/content/meet.html
@@ -14,7 +14,7 @@
 <div class="brand-brown-bg speech">
   <div class="container">
     <div class="suman-video">
-<iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height ="100%" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 </div>
