--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -823,7 +823,7 @@
       &:focus { color: white; }
     }
     .slider {
-      width: 95%;
+      width: 1083px;
       margin: 0 auto;
     }
   }
