--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -14,16 +14,16 @@
 
   <div class="about-health brand-brown-bg">
     <div class="container">
-      <h2 class="brand-brown-dark font-baubodi">Health is, after all, about a state of absolute harmony—of the body, mind and spirit.</h2>
+      <h2 class="brand-brown-dark text-center font-baubodi">Health is, after all, about a state of absolute harmony—of the body, mind and spirit.</h2>
       <div class="about-health-content brand-brown-light-bg">
         <div class="row">
-          <div class="col-md-5">
+          <div class="col-md-5 col-sm-12">
             <div class="embed-youtube">
               <!-- Youtube video -->
               <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
-          <div class="col-md-7">
+          <div class="col-md-7 col-sm-12">
             <!-- Boostrap slider -->
             <carousel interval="sliderInterval" no-wrap="noWrapSlides">
               <slide ng-repeat="slide in aboutSlides" active="slide.active">
