--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -7,7 +7,7 @@
   <div class="contact-location">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-5">
           <div class="mumbai">
             <h4 class="text-uppercase brand-brown-dark font-semibold">Mumbai</h4>
 
@@ -58,7 +58,7 @@
           </div>
         </div>
 
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-7">
           <!-- Map -->
           <div class="contact-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3773.0566089680547!2d72.81150841509329!3d18.973107187147065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ce7051b84445%3A0x1474fecba24a5185!2sArun+Chambers%2C+Tardeo+Rd%2C+Janata+Nagar%2C+Tardeo%2C+Mumbai%2C+Maharashtra+400034!5e0!3m2!1sen!2sin!4v1451038314725"
