--- a/views/content/news.html
+++ b/views/content/news.html
@@ -22,7 +22,7 @@
 
       <div class="news-article" ng-repeat="article in news">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4">
             <div class="article-image">
               <a fancybox-box href="{{article.image1}}">
                 <img ng-src="{{article.image1}}" alt="" class="img-responsive">
@@ -31,14 +31,14 @@
             <p class="brand-brown-dark">{{article.title1}}</p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4">
             <div class="article-image">
             <a fancybox-box href="{{article.image2}}">  <img ng-src="{{article.image2}}" alt="" class="img-responsive"></a>
             </div>
             <p class="brand-brown-dark">{{article.title2}}</p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4">
             <div class="article-image">
               <a fancybox-box href="{{article.image3}}" ><img ng-src="{{article.image3}}" alt="" class="img-responsive"></a>
             </div>
