--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -207,60 +207,62 @@
     <div class="container">
       <h3 class="text-center text-uppercase">Growth in the number of clients across the past decade:</h3>
 
-      <div class="growth-years">
-        <div class="growth-line"></div>
-        <ul>
-          <li>
-            <span class="growth-year up">2004</span>
-            <div class="line-up"></div>
-            <span class="growth-number round">316</span>
-          </li>
-          <li>
-            <span class="growth-year down">2005</span>
-            <div class="line-down"></div>
-            <span class="growth-number round">470</span>
-          </li>
-          <li>
-            <span class="growth-year up">2006</span>
-            <div class="line-up"></div>
-            <span class="growth-number round">795</span>
-          </li>
-          <li>
-            <span class="growth-year down">2007</span>
-            <div class="line-down"></div>
-            <span class="growth-number round">913</span>
-          </li>
-          <li>
-            <span class="growth-year up">2008</span>
-            <div class="line-up"></div>
-            <span class="growth-number round">1593</span>
-          </li>
-          <li>
-            <span class="growth-year down">2009</span>
-            <div class="line-down"></div>
-            <span class="growth-number round">316</span>
-          </li>
-          <li>
-            <span class="growth-year up">2010</span>
-            <div class="line-up"></div>
-            <span class="growth-number round">1239</span>
-          </li>
-          <li>
-            <span class="growth-year down">2011</span>
-            <div class="line-down"></div>
-            <span class="growth-number round">1223</span>
-          </li>
-          <li>
-            <span class="growth-year up">2012</span>
-            <div class="line-up"></div>
-            <span class="growth-number round">1124</span>
-          </li>
-          <li>
-            <span class="growth-year down">2013</span>
-            <div class="line-down"></div>
-            <span class="growth-number round">749</span>
-          </li>
-        </ul>
+      <div class="growth-inner">
+        <div class="growth-years">
+          <div class="growth-line"></div>
+          <ul>
+            <li>
+              <span class="growth-year up">2004</span>
+              <div class="line-up"></div>
+              <span class="growth-number round">316</span>
+            </li>
+            <li>
+              <span class="growth-year down">2005</span>
+              <div class="line-down"></div>
+              <span class="growth-number round">470</span>
+            </li>
+            <li>
+              <span class="growth-year up">2006</span>
+              <div class="line-up"></div>
+              <span class="growth-number round">795</span>
+            </li>
+            <li>
+              <span class="growth-year down">2007</span>
+              <div class="line-down"></div>
+              <span class="growth-number round">913</span>
+            </li>
+            <li>
+              <span class="growth-year up">2008</span>
+              <div class="line-up"></div>
+              <span class="growth-number round">1593</span>
+            </li>
+            <li>
+              <span class="growth-year down">2009</span>
+              <div class="line-down"></div>
+              <span class="growth-number round">316</span>
+            </li>
+            <li>
+              <span class="growth-year up">2010</span>
+              <div class="line-up"></div>
+              <span class="growth-number round">1239</span>
+            </li>
+            <li>
+              <span class="growth-year down">2011</span>
+              <div class="line-down"></div>
+              <span class="growth-number round">1223</span>
+            </li>
+            <li>
+              <span class="growth-year up">2012</span>
+              <div class="line-up"></div>
+              <span class="growth-number round">1124</span>
+            </li>
+            <li>
+              <span class="growth-year down">2013</span>
+              <div class="line-down"></div>
+              <span class="growth-number round">749</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
