--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -483,7 +483,9 @@
     font-weight: bold;
     letter-spacing: 5px;
   }
+  .growth-inner { overflow: scroll; }
   .growth-years {
+    min-width: 1136px;
     position: relative;
     letter-spacing: 2px;
     .growth-line {
